@@ -663,6 +663,20 @@ public class HadoopTapPlatformTest extends PlatformTestCase implements Serializa
     assertEqualsSize( "current", -1, tap.getChildIdentifiers( jobConf, 1, false ) );
     assertEqualsSize( "current", -1, tap.getChildIdentifiers( jobConf, 0, true ) );
     assertEqualsSize( "current", -1, tap.getChildIdentifiers( jobConf, 0, false ) );
+
+    tap = new Hfs( new TextLine( new Fields( "offset", "line" ) ), getOutputPath( "hiddenfiles" ) );
+
+    writeFileTo( "hiddenfiles/A" );
+    writeFileTo( "hiddenfiles/B" );
+    writeFileTo( "hiddenfiles/.hidden" );
+
+    assertEqualsSize( "children", 2, tap.getChildIdentifiers( jobConf ) );
+    assertEqualsSize( "children", 2, tap.getChildIdentifiers( jobConf, 2, true ) );
+    assertEqualsSize( "children", 2, tap.getChildIdentifiers( jobConf, 2, false ) );
+    assertEqualsSize( "children", 2, tap.getChildIdentifiers( jobConf, 1, true ) );
+    assertEqualsSize( "children", 2, tap.getChildIdentifiers( jobConf, 1, false ) );
+    assertEqualsSize( "children", 1, tap.getChildIdentifiers( jobConf, 0, true ) );
+    assertEqualsSize( "children", 1, tap.getChildIdentifiers( jobConf, 0, false ) );
     }
 
   public void assertEqualsSize( String message, int expected, String[] actual )
